# Warper

./: LICENSE  README.md  io.github.mrvladus.Warper.json  meson.build
data/applications/: io.github.mrvladus.Warper.desktop
data/metainfo/: io.github.mrvladus.Warper.metainfo.xml
src/: main.c
